--- a/index.html
+++ b/index.html
@@ -8,7 +8,26 @@
 </head>
 <body>
     <h1>Robert Salmon</h1>
-    <div>Dragons</div>
+    <br>
+    <h2>About</h2>
+    <p>Hey Hey!</p>
+    <br>
+    <p>My name is Rob Salmon.  I am a full stack web developer.  What I love the most is the beach and if I'm not working on project that is where you will find me.</p>
+    <br>
+    <br>
+    <h2>Skills</h2>
+    <br>
+    <p>My skills are the art of pertsuasion.  I've worked in sales for a few years now.  I enjoy constructioning and building projects.  I enjoy creating art.  Working out is medication for me and I can't live without cardio and weights.</p>
+    <br>
+    <br>
+    <h2>Projects</h2>
+    <br>
+    <p>During my time at Devmountains Coding Bootcamp I created a calculator and that's it.  To be continued...</p>
+    <br>
+    <br>
+    <h2>Contact</h2>
+    <br>
+    <p>Here's the thing I don't want to be contacted.  You don't want to take that risk, believe me there is no going back.  Life will never be the same.  "Abondon all hope ye who enter here."  You don't find, but I will find you!</p>
     
 </body>
 </html>
